[package]
name = "si473x"
version = "0.1.0"
authors = ["Alexey Papkovskiy <a.papkovskiy@gmail.com>"]
repository = "https://github.com/apapkovskiy/si473x-rs"
license = "MIT OR Apache-2.0"
description = "Rust driver for the Si473x AM/FM/SW/LW radio receivers."
readme = "README.md"
keywords = ["fm", "radio", "receiver", "embedded-hal-async"]
categories = ["embedded", "no-std", "command-line-interface"]
homepage = "https://github.com/apapkovskiy/si473x-rs"
documentation = "https://docs.rs/si473x"
edition = "2024"

[features]
defmt = ["dep:defmt"]

[dependencies]
embassy-time = { version = "0.5.0" }
embedded-hal = { version = "1.0" }
embedded-hal-async = { version = "1.0" }
defmt = { version = "1.0.1", optional = true }

[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.7"

[profile.release]
lto = true
